--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,23 @@
 *.ptx
 *.cubin
 *.fatbin
+
+
+# Byte-compiled files
+__pycache__/
+*.py[cod]
+
+# Distribution / packaging
+build/
+dist/
+*.egg-info/
+
+# Virtual environments
+venv/
+.env/
+.vscode/
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
